--- a/src/header.css
+++ b/src/header.css
@@ -11,7 +11,7 @@
   right: 0;
   top: 0;
   /*z-index: 2;*/
-  z-index: 3;
+  z-index: 4;
 
 }
 
